# resume_crittique

./: README.md  main.py  pyproject.toml  requirements.txt
